almost in good working order

--- a/Desktop/app/src/main/res/values/strings.xml
+++ b/Desktop/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="action_new">Settings</string>
     <string name="logo_desc">App logo</string>
     <string name="country_name">Nigeria</string>
+    <string name="search_hint" />
 
 </resources>
