--- a/Desktop/app/src/main/res/values/strings.xml
+++ b/Desktop/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
 
-
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
@@ -11,5 +10,5 @@
     <string name="logo_desc">App logo</string>
     <string name="country_name">Nigeria</string>
     <string name="search_hint" />
-
+    <string name="title_activity_main2">Main2Activity</string>
 </resources>
